workspace-sf/force-app/main/default/objects/RetencaoComissaoProduto__c/RetencaoComissaoProduto__c.object-meta.xml
<CustomObject>
    <label>Retenção de Comissão do Produto</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retenções de Comissão do Produto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>