workspace-sf/force-app/main/default/objects/RetencaoComissaoProduto__c/fields/AplicarParaRenovacao__c.field-meta.xml
<CustomField>
    <fullName>AplicarParaRenovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplicar para renovação?</label>
    <type>Checkbox</type>
</CustomField>