workspace-sf/force-app/main/default/objects/RetencaoComissaoProduto__c/fields/PercentualRetencao__c.field-meta.xml
<CustomField>
    <fullName>PercentualRetencao__c</fullName>
    <label>Percentual da retenção</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>