workspace-sf/force-app/main/default/objects/RetencaoComissaoProduto__c/fields/ProdutoCanal__c.field-meta.xml
<CustomField>
    <fullName>ProdutoCanal__c</fullName>
    <label>Produto do canal</label>
    <referenceTo>ProdutoCanal__c</referenceTo>
    <relationshipLabel>Retenções de Comissão do Produto</relationshipLabel>
    <relationshipName>RetencoesComissaoProduto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>