workspace-sf/force-app/main/default/objects/RetencaoComissaoProduto__c/fields/SusepCorretor__c.field-meta.xml
<CustomField>
    <fullName>SusepCorretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Código susep do corretor na Cia</inlineHelpText>
    <label>Susep do corretor</label>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipLabel>Retenções de Comissão do Produto</relationshipLabel>
    <relationshipName>RetencesComissaoProduto</relationshipName>
    <type>Lookup</type>
</CustomField>